# runproclike

./: .dockerignore  .gitignore  Cargo.toml  README.md
.github/docker/: Dockerfile  Dockerfile.build
.github/workflows/: release.yml  rust.yml
src/: cli.rs  executable.rs  executable_linux.rs  executable_macos.rs  main.rs  proc.rs
