[package]
name = "runproclike"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/PauloMigAlmeida/runproclike"
repository = "https://github.com/PauloMigAlmeida/runproclike.git"
description = "runproclike is a CLI utility that analyzes a running process by its PID and prints the command and its environment in a reproducible form."

[dependencies]
procfs = "0.17.0"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
anyhow = "1.0.95"
